# razorforge-suflae

./: .editorconfig  .gitignore  BUILD.md  CMakeLists.txt  IDE_SETUP_SUMMARY.md  LICENSE  Makefile  QUICK_START.md  README.md  RIDER_SETUP.md  RazorForge.csproj  SETUP_COMPLETE.md  VSCODE_SETUP.md  build.bat  build.sh  build_output.txt  fix_urls.py  main.rf  rename_files.py  rename_types.py  replace_push_pop.py  rf-build  run-lsp.bat  setup-rider.bat  setup-rider.sh  setup-vscode.bat  setup-vscode.sh  test-lsp-init.json  test_cake.cake  test_codegen.rf  test_codegen.s  test_import.rf  test_minimal.rf  test_razorforge.rf  test_suflae.sf
.gitea/workflows/: build.yaml
RazorForge.tmbundle/: info.plist
RazorForge.tmbundle/Syntaxes/: RazorForge.tmLanguage.json
Suflae.tmbundle/: info.plist
Suflae.tmbundle/Syntaxes/: Suflae.tmLanguage.json
cmake/: FindDotNet.cmake  FindNodeJS.cmake
docs/: AST-API-REFERENCE.md  AST_API_REFERENCE.md  AUDIT-CHECKLIST.md  BUG_12.13_ANALYSIS.md  COMPILER-TODO.md  COMPILER_ARCHITECTURE.md  COMPILER_FLOWCHART.txt  COMPILER_TODO.md  DESIGN-TODO.md  GENERICS_STATUS.md  IMPORT_SYSTEM_IMPLEMENTATION.md  INTRINSICS_IMPLEMENTATION_SUMMARY.md  LSP-TODO.md  MULTI_TARGET_CODEGEN.md  OVERHAUL-PLAN.md  Rider-IDE-Setup.md  SEMANTIC-CODEGEN-FLOWCHART.md  SEMANTIC-EXPRESSIONS-FLOW.md  STDLIB-CHECKLIST.md  STDLIB-TODO.md  STDLIB_CHECKLIST.md  STDLIB_TODO.md  WIKI-TODO.md  razorforge-colors.md  razorforge.tmLanguage.json  razorforgecake.icls  razorforgesuflae.icls  rider-filetypes.xml  rider-live-templates.xml
docs/archive/: COMPILER-FLOWCHART.txt  COMPILER-INTERNALS.md  COMPILER.md  DESIGN-DECISIONS.md  GENERICS-STATUS.md  INTRINSICS-API.md  MULTI-TARGET-CODEGEN.md  SESSION-2025-12-28.md  TUPLE-REMOVAL-ANALYSIS.md
examples/: console_demo.rf  control_flow.rf  hello_world.rf  intrinsics_demo.rf  memory_management.rf  numeric_types_demo.rf  primitive_types_demo.rf  suflae_console_demo.sf
extensions/cake/: language-configuration.json  package-lock.json  package.json
extensions/extension-pack/: package.json
extensions/razorforge/: .eslintrc.json  .prettierignore  .razorforge-format.json  .vscodeignore  README.md  SETUP.md  language-configuration.json  package-lock.json  package.json  razorforge-language-support-0.1.0.vsix  razorforge-language-support-0.1.4.vsix  razorforge-language-support-0.1.5.vsix  razorforge-language-support-0.1.6.vsix
extensions/suflae/: package-lock.json  package.json  suflae-language-support-0.1.0.vsix
internal-wiki/: BUILD.md
native/: CMakeLists.txt  README.md  build.bat  build.sh
native/cmake/: bdwgc.cmake  decNumber.cmake  icu.cmake  inteldecimal.cmake  libbf.cmake  libco.cmake  libsodium.cmake  libtommath.cmake  libuv.cmake  mapm.cmake  minicsv.cmake  openssl.cmake  pcre2.cmake  sqlite3.cmake  tomlc99.cmake  utf8proc.cmake  yyjson.cmake  zlib.cmake  zstd.cmake
native/include/: razorforge_math.h  razorforge_runtime.h
native/libdfp/: CMakeLists.txt
native/mafm/: CMakeLists.txt
native/runtime/: async_io.c  bignum_functions.c  compiler_rt_shim.c  concurrency_context.c  console_runtime.c  crash_runtime.c  csharp_interop.c  cstring_runtime.c  datetime.c  decimal_functions.c  duration_wait.c  f128_functions.c  f16_functions.c  file_functions.c  i8.c  main_wrapper.c  math_functions.c  math_wrapper.c  memory.c  moment.c  primitives.c  random.c  runtime.c  runtime_init.c  shared_locks.c  stacktrace.c  task_runtime.c  text_functions.c  types.h
scripts/: add_explicit_returns.ps1  bootstrap.bat  bootstrap.sh  fix_llvm_intrinsic_returns.ps1  fix_llvm_intrinsic_returns_with_comments.ps1  fix_single_line_returns.ps1  format-code.sh  merge_wiki.ps1  package.sh  run-tests.sh  test_bootstrap.sh
src/AST/: ASTNode.cs  Declarations.cs  Expressions.Async.cs  Expressions.cs  Statements.cs  TypeInfo.cs
src/Analysis/: BuilderInfoProvider.cs  CorePreludeLoader.cs  FunctionVariantGenerator.cs  GenericTypeResolver.cs  Language.cs  MemoryAnalyzer.cs  MemoryModel.cs  ModuleResolver.cs  SemanticAnalyzer.Calls.cs  SemanticAnalyzer.DangerZone.cs  SemanticAnalyzer.Declarations.AutoRegister.cs  SemanticAnalyzer.Declarations.Protocols.cs  SemanticAnalyzer.Declarations.Signatures.cs  SemanticAnalyzer.Declarations.TypeBodies.cs  SemanticAnalyzer.Declarations.Wired.cs  SemanticAnalyzer.Declarations.cs  SemanticAnalyzer.ErrorHandling.cs  SemanticAnalyzer.Expressions.Access.cs  SemanticAnalyzer.Expressions.Calls.cs  SemanticAnalyzer.Expressions.Collections.cs  SemanticAnalyzer.Expressions.Generics.cs  SemanticAnalyzer.Expressions.Literals.cs  SemanticAnalyzer.Expressions.Special.cs  SemanticAnalyzer.Expressions.cs  SemanticAnalyzer.Helpers.Access.cs  SemanticAnalyzer.Helpers.Narrowing.cs  SemanticAnalyzer.Helpers.Protocols.cs  SemanticAnalyzer.Helpers.Wrappers.cs  SemanticAnalyzer.Helpers.cs  SemanticAnalyzer.Imports.cs  SemanticAnalyzer.Memory.cs  SemanticAnalyzer.Modification.cs  SemanticAnalyzer.Mutation.cs  SemanticAnalyzer.Patterns.cs  SemanticAnalyzer.ScopedAccess.cs  SemanticAnalyzer.Slices.cs  SemanticAnalyzer.Statements.cs  (+8 more)
stdlib/: BackIndex.rf  ComparisonSign.rf  Console.rf  Decimal.rf  Fraction.rf  Integer.rf  Integral.rf  Range.rf  Representable.rf  core.rf
tests/: BasicCompilerTests.cs  CompilerIntegrationTests.cs  TestHelpers.cs  TestUtilities.cs  compiler_integration_test.rf  comprehensive_test.rf  danger_zone_memory_test.rf  memory_slice_test.rf  simple_test.cake  simple_test.sf  stdlib_stub_rf.rf  stdlib_stub_sf.sf  test_arbitrary_precision.sf  test_arrow_lambda.rf  test_block_if.rf  test_byte_literal.rf  test_console_generic.rf  test_crash_only.rf  test_crashable.rf  test_external_console.rf  test_external_generic.rf  test_fail_absent.rf  test_generic_constraints.rf  test_generic_method.rf  test_generic_type_method.rf  test_generics.rf  test_if_stmt.rf  test_if_stmt2.rf  test_import.rf  test_inference.rf  test_loop_simple.rf  test_named_args.rf  test_namespace_func.rf  test_native_call.rf  test_nested_generics.rf  test_new_features.cake  test_new_features.rf  test_new_features.sf  test_parser_updates.rf  test_reserved_prefix.rf  (+8 more)
(+1247 files in other folders)
